--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@aws-lambda-powertools/idempotency": "^2.8.0",
+    "@aws-lambda-powertools/logger": "^2.8.0",
     "@aws-sdk/client-dynamodb": "^3.616.0",
     "@aws-sdk/client-rekognition": "^3.616.0",
     "@aws-sdk/client-s3": "^3.616.0",
